исправлен баг отправки с iOS

--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
                 <button
                   type="submit"
                   class="form__button form__button_mainForm"
+                  id="submitBtn"
                 >
                   Получить консультацию <span>></span>
                 </button>
@@ -256,6 +257,7 @@
           </div>
         </div>
       </section>
+
       <section class="weAre">
         <div class="container">
           <h2>Кто мы?</h2>
